[tool.poetry]
name = "smart_meter"
version = "0.1.0"
description = "Reads data from the smart meter"
authors = ["ChristianSauer <christian.sauer@email.de>"]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.3"
pyyaml = "^5.3.1"
pyravendb = "^5.0.0"
typing-extensions = "^3.7.4"
smlpy = "^0.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
